# ChaoxingExam

./: .gitignore  eeeeyr.bat  install.bat  install.ps1  pyproject.toml
eeeeyr/: __init__.py  __main__.py  banner.py  cli.py  core.py
